# art-with-rust

./: .gitignore  Cargo.toml  README.md  pallete.txt
examples/: cycloid.rs  pallete.rs  polyrotate.rs  spirograph.rs  trochoidal.rs
src/: cycloid.rs  main.rs  pallete.rs  polyrotate.rs  spirograph.rs  trochoidal.rs
src/tools/: colors.rs  math.rs  mod.rs
src/types/: figure.rs
